implantei tabelas de pedidos e de itens de pedidos, e seu controlador. Também um validador da entrada de dados para esse controlador. Se pa posso testar essa entrada via Postman… Ah, também implantei tabela para dar categorias (ou tags) aos produtos, que usarei para a pesquisa. Tbm implementei o controlador para essas pesquisas. Ademais, implementei controlador para retornar a lista dos mais novos produtos e dos mais vendidos (só o primeiro eu testei).

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@adonisjs/core": "^6.8.0",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^20.5.1",
+    "@adonisjs/static": "^1.1.1",
     "@vinejs/vine": "^2.0.0",
     "luxon": "^3.4.4",
     "pg": "^8.11.5",
