carrinho de compras implantado no back. Tentando fazer funcionar no front. Tentando criar o contexto que o provida

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@adonisjs/lucid": "^20.6.0",
     "@adonisjs/static": "^1.1.1",
     "@vinejs/vine": "^2.0.0",
+    "bignumber.js": "^9.1.2",
     "luxon": "^3.4.4",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.2"
