Implementei o sistema de refresh tokens. O guard deles ficou sendo o antigo, de tokens na db, e os access tokens ficaram por JWT.  Com isso a necessidades de buscas à DB pra cada requisição fica reduzida! Antes quase tudo que o usuário fazia no site pedia por uma verificação na DB checando o token dele. Agr, com JWT isso foi embora, necessitando checar a db apenas quando o token expira, e tbm no logout. Falta implementar a verificação de tokens de acesso revogados, que farei pelo redis, que é bem mais rápido que as buscas na db normal

--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
     "@adonisjs/lucid": "^20.6.0",
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/validator": "^13.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@vinejs/vine": "^2.0.0",
     "bignumber.js": "^9.1.2",
+    "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.2"
