fiz um monte de coisa...

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ DB_PASSWORD=71489
 DB_DATABASE=SaposoData
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=
