--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@adonisjs/core": "^6.9.0",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^20.6.0",
+    "@adonisjs/redis": "^9.1.0",
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/validator": "^13.0.2",
     "@types/jsonwebtoken": "^9.0.6",
