finalizado a implementação do firebase, consegui ajustar o sistema de usuários, adicionando TODOS os usuários do sistema à minha db, e criando carrinhos de compras para eles quando do login.

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@vinejs/vine": "^2.0.0",
     "bignumber.js": "^9.1.2",
+    "firebase-admin": "^12.2.0",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
     "pg": "^8.11.5",
