--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "license": "UNLICENSED",
   "scripts": {
-    "start": "node build/ace.js",
-    "build": "tsc",
+    "start": "node bin/server.js",
+    "build": "node ace build",
     "dev": "node ace serve --watch",
     "test": "node ace test",
     "lint": "eslint .",
