--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "firebase-admin": "^12.2.0",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
+    "openai": "^4.66.1",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.2"
   },
